# tukun

./: .gitignore  Cargo.toml  tas  tr
.github/workflows/: rust.yml
assembler/: Cargo.toml
assembler/src/: assembler.rs  main.rs  ops.json  parser.rs  result.rs  tukun.pest.common  tukun.pest.ops
assembler/src/ast/: attribute.rs  block.rs  constant.rs  function.rs  mod.rs  module.rs  types.rs
assembler/src/ast/instructions/: fcall.rs  fromslot.rs  imp.rs  jtrue.rs  jump.rs  lpush.rs  mod.rs  push.rs  toslot.rs
assembler/src/lowering/: mod.rs
assembler/src/lowering/instructions/: fcall.rs  fromslot.rs  jtrue.rs  jump.rs  lpush.rs  mod.rs  push.rs  toslot.rs
assembler/src/test/: mod.rs
corelib/: Cargo.toml
corelib/src/: lib.rs
corelib/src/test/: util.rs
corelib/src/time/: mod.rs
corelib/src/types/: mod.rs
corelib/src/util/: mod.rs
runner/: Cargo.toml
runner/src/: lib.rs  main.rs
runtime/: Cargo.toml
runtime/src/: bytecode.rs  environ.rs  frame.rs  instruction_def.rs  instruction_runtime.rs  intern_value.rs  lib.rs  log.rs  module_definition.rs  opcodes.rs  ops.json  runloop.rs  runtime_module.rs  stack.rs  unwinder.rs
runtime/src/builder/: mod.rs
runtime/src/test/: mod.rs
runtime/src/types/: array.rs  mod.rs  record.rs  typedef.rs
runtime/src/values/: array.rs  comparators.rs  mod.rs  record.rs
