[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tas"
path = "src/main.rs"

[dependencies]
either = "1.11.0"
pest = { version = "2.7.8", features = ["pretty-print"] }
pest_derive = { version = "2.7.8", features = ["grammar-extras"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
runtime = { path = "../runtime" }
corelib = { path = "../corelib" }
clap = { version = "4.5.4", features = ["derive", "unicode"] }
bincode = "1.3.3"
